Creando un pojo y llamando la data desde properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ server.servlet.context-path=/app
 value.name=jonathan
 value.apellido=sotto
 value.random=${random.value}
+
+user.email=test@email.com
+user.password=12345
+user.age=25
