Usando logs con la libreria de apache common y usando entidades con JPA

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ value.random=${random.value}
 user.email=test@email.com
 user.password=12345
 user.age=25
+
+logging.level.root=debug
+logging.level.org.springframework.web=info
+logging.lavel.org.hibernete=error
